--- a/catwebsite.html
+++ b/catwebsite.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Cat Website</title>
 </head>
 <body>
-    
+    <h1>The domestic cat</h1>
+    <hr>
 </body>
 </html>
