--- a/catwebsite.html
+++ b/catwebsite.html
@@ -7,7 +7,19 @@
     <title>Cat Website</title>
 </head>
 <body>
-    <h1>The domestic cat</h1>
-    <hr>
+    <!-- section 1 -->
+    <section>
+        <h1 class="header">The domestic cat</h1>
+        <hr>
+        <p>Click here for more informations about <a href="thelions.html">the lions</a></p>
+    </section>
+
+    <!-- section 2 -->
+    <section>
+        <h2>About domestic cats</h2>
+        <p>They are often called <em>house cats</em> when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. They are often valued by humans for <span id="bold">companionship.</span><br><br>
+
+            There are more than <span id="highlight">seventy cat breeds</span> recognized by various cat registries..</p>
+    </section>
 </body>
 </html>
