--- a/catwebsite.html
+++ b/catwebsite.html
@@ -20,6 +20,21 @@
         <p>They are often called <em>house cats</em> when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. They are often valued by humans for <span id="bold">companionship.</span><br><br>
 
             There are more than <span id="highlight">seventy cat breeds</span> recognized by various cat registries..</p>
+
+            <div id="catsenses">
+                <h3>Cat senses</h3>
+                    <ul>
+                        <li>They can hear sounds too faint or too high in frequency for human ears.</li>
+                        <li>They can see in near darkness.</li>
+                        <li>They have poorer color vision and a better sense of smell than humans.</li>
+                    </ul>
+            </div>
+    </section>
+
+    <section>
+        <h2>History</h2>
+        <p>Cats were venerated in ancient Egypt, but there may have been instances of domestication as early as the Neolithic from around 9,500 years ago (7500 BC).<br>
+            Did you know that, The felids are a rapidly evolving family of mammals that includes:</p>
     </section>
 </body>
 </html>
