--- a/catwebsite.html
+++ b/catwebsite.html
@@ -42,5 +42,11 @@
                 <li>cougars</li>
             </ol>
     </section>
+<br>
+    <div id="media">
+        <h2>Media</h2>
+        <br>
+        <img src="pexels-pixabay-416160.jpg" alt="cat">
+    </div>
 </body>
 </html>
