--- a/catwebsite.html
+++ b/catwebsite.html
@@ -11,7 +11,7 @@
     <section>
         <h1 class="header">The domestic cat</h1>
         <hr>
-        <p>Click here for more informations about <a href="thelions.html">the lions</a></p>
+        <p>Click here for more informations about <a href="thelions.html" target="_blank">the lions</a></p>
     </section>
 
     <!-- section 2 -->
