--- a/thelions.html
+++ b/thelions.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>The lions</title>
 </head>
 <body>
-    
+    <h1>The lions</h1>
+    <hr>
+    <br>
+    <article>Present in Africa and India, the lion typically inhabits grasslands and savannahs, but is absent in dense forests. It is usually more diurnal than other big cats, but when persecuted adapts to being active at night and at twilight. A lion pride consists of a few adult males, related females and cubs. Prides vary in size and composition from three to 20 adult lions, depending on habitat and prey availability. Females cooperate when hunting and prey mostly on large ungulates, including antelope, deer, buffalo, zebra and even giraffe.</article>
+    <div id="characteristics">
+        <p>The difference between Characteristics and Behavior</p>
+    </div>
 </body>
 </html>
