--- a/catwebsite.html
+++ b/catwebsite.html
@@ -43,7 +43,7 @@
             </ol>
     </section>
 <br>
-    <div id="media">
+    <div class="media">
         <h2>Media</h2>
         <br>
         <img src="pexels-pixabay-416160.jpg" alt="cat">
