--- a/thelions.html
+++ b/thelions.html
@@ -7,15 +7,19 @@
     <title>The lions</title>
 </head>
 <body>
-    <h1>The lions</h1>
-    <hr>
+    <section>
+        <h1>The lions</h1>
+        <hr>
+        <br>
+            <article>Present in Africa and India, the lion typically inhabits grasslands and savannahs, but is absent in dense forests. It is usually more diurnal than other big cats, but when persecuted adapts to being active at night and at twilight. A lion pride consists of a few adult males, related females and cubs. Prides vary in size and composition from three to 20 adult lions, depending on habitat and prey availability. Females cooperate when hunting and prey mostly on large ungulates, including antelope, deer, buffalo, zebra and even giraffe.</article>
+        <br>
+        <div id="characteristics">
+            <p>The difference between Characteristics and Behavior</p>
+        </div>
+    </section>
     <br>
-    <article>Present in Africa and India, the lion typically inhabits grasslands and savannahs, but is absent in dense forests. It is usually more diurnal than other big cats, but when persecuted adapts to being active at night and at twilight. A lion pride consists of a few adult males, related females and cubs. Prides vary in size and composition from three to 20 adult lions, depending on habitat and prey availability. Females cooperate when hunting and prey mostly on large ungulates, including antelope, deer, buffalo, zebra and even giraffe.</article>
-    <br>
-    <div id="characteristics">
-        <p>The difference between Characteristics and Behavior</p>
-    </div>
-
+    <section>
+    <div>
     <table>
         <tr>
             <th>Characteristics</th>
@@ -26,5 +30,13 @@
             <td>Lions spend much of their time and resting, and are inactive for about 20 hours per day.</td>
         </tr>
     </table>
+    </div>
+    </section>
+    <br><br><br>
+    <section>
+    <div class="media">
+        <img src="pexels-gareth-davies-230510-1598377.jpg" alt="lion">
+    </div>
+    </section>
 </body>
 </html>
