--- a/thelions.html
+++ b/thelions.html
@@ -35,7 +35,7 @@
     <br><br><br>
     <section>
     <div class="media">
-        <img src="pexels-gareth-davies-230510-1598377.jpg" alt="lion">
+        <img id="lion" src="pexels-gareth-davies-230510-1598377.jpg" alt="lion">
     </div>
     </section>
 </body>
