--- a/landingpage.html
+++ b/landingpage.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.css.">
-    <link ref="stylesheet" href="landing.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="Style.css">
+    <title>Web Design</title>
 </head>
 <body>
-    
 </body>
 </html>
