--- a/landingpage.html
+++ b/landingpage.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="Style.css">
     <title>Web Design</title>
 </head>
 <body>
+    <!-- navbar -->
+     <div id="navbar">
+        <ul>
+            <button type="button" class="btn btn-primary" id="signin">Sign in</button>
+            <li>Start Bootstrap</li>
+        </ul>
+     </div>
+
+     <div id="body">
+        <h1>Build a landing page for your business<br>or project and generate more leads!</h1>
+     </div>
 </body>
 </html>
