--- a/catwebsite.html
+++ b/catwebsite.html
@@ -9,7 +9,7 @@
 <body>
     <!-- section 1 -->
     <section>
-        <h1 class="header">The domestic cat</h1>
+        <h1 class="header">The Domestic cat</h1>
         <hr>
         <p>Click here for more informations about <a href="thelions.html" target="_blank">the lions</a></p>
     </section>
