--- a/Week2/day4/ShoppingWebsite.html
+++ b/Week2/day4/ShoppingWebsite.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <title>Shopping website</title>
 
 </head>
 <body>
-    
+    <!-- Navbar -->
+     <div id="navbar">
+        <ul>
+            <li id="products"><a href="products.html">Our products</a></li>
+            <li><i class="fa-sharp fa-solid fa-crown" style="color: #ffffff;"></i></li>
+         </ul>
+     </div>
+    <!-- end of navbar -->
 </body>
 </html>
