--- a/Week2/day4/products.html
+++ b/Week2/day4/products.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link ref="stylesheet" href="products.css">
+    <link rel="stylesheet" href="products.css">
     <title>Products</title>
+
+</head>
 <body>
     <!-- Navbar -->
      <div id="navbar">
@@ -18,8 +19,7 @@
     <!-- end of navbar -->
 
     <!-- Products -->
-
-     <!-- End of products -->
+     
+     <!-- End products -->
 </body>
-
-</head>
+</html>
