--- a/Week2/day4/ShoppingWebsite.html
+++ b/Week2/day4/ShoppingWebsite.html
@@ -17,5 +17,10 @@
          </ul>
      </div>
     <!-- end of navbar -->
+
+    <!-- footer -->
+    <div class="footer">
+        <p>Laurie | 2025</p>
+       </div>
 </body>
 </html>
