--- a/Week2/day4/products.html
+++ b/Week2/day4/products.html
@@ -19,7 +19,11 @@
     <!-- end of navbar -->
 
     <!-- Products -->
-     
+
      <!-- End products -->
+      <!-- footer -->
+       <div class="footer">
+        <p>Laurie | 2025</p>
+       </div>
 </body>
 </html>
