--- a/Week2/day4/products.html
+++ b/Week2/day4/products.html
@@ -19,6 +19,11 @@
     <!-- end of navbar -->
 
     <!-- Products -->
+     <div id="box">
+        <div class="pic1">
+            
+        </div>
+     </div>
 
      <!-- End products -->
       <!-- footer -->
