--- a/Week2/day4/ShoppingWebsite.html
+++ b/Week2/day4/ShoppingWebsite.html
@@ -13,7 +13,7 @@
      <div id="navbar">
         <ul>
             <li id="products"><a href="products.html" target="_blank">Our products</a></li>
-            <li><a href="ShoppingWebsite.html"><i class="fa-sharp fa-solid fa-crown" style="color: #ffffff;"></i></a></li>
+            <li><a href="ShoppingWebsite.html" target="_blank"><i class="fa-sharp fa-solid fa-crown" style="color: #ffffff;"></i></a></li>
          </ul>
      </div>
     <!-- end of navbar -->
