--- a/Week2/day4/products.html
+++ b/Week2/day4/products.html
@@ -21,7 +21,8 @@
     <!-- Products -->
      <div id="box">
         <div class="pic">
-            <img src="image1.png" alt="women's black top" class="picture">
+            <img src="image1.png" alt="women's black top"class="picture"><div id="discount"><span class="discount1">NEW</span>&nbsp;<span class="discount2">-10%</span></div>
+
             <p>Women's black top</p>
             <br>
             <span class="newprice">$14.40</span><span class="oldprice">$16.00</span>
