--- a/Week2/day4/products.html
+++ b/Week2/day4/products.html
@@ -23,8 +23,8 @@
         <div class="pic">
             <img src="image1.png" alt="women's black top"class="picture">
             <div id="discount">
-                <span class="discount1">NEW</span>&nbsp;
-                <span class="discount2">-10%</span>
+                <p class="discount1">NEW</p>&nbsp;
+                <p class="discount2">-10%</p>
             </div>
             <p>Women's black top</p>
             <br>
@@ -37,8 +37,8 @@
         <div class="pic">
             <img src="image2.png" alt="women's black top"class="picture">
                 <div id="discount">
-                    <span class="discountsolo"></span>&nbsp;
-                    <span class="discount2">-10%</span>
+                    <p class="discountsolo"></p>&nbsp;
+                    <p class="discount2">-10%</p>
                 </div>
             <p>Women's black top</p>
             <br>
@@ -51,8 +51,8 @@
         <div class="pic">
             <img src="image3.png" alt="women's black top" class="picture">
                 <div id="discount">
-                    <span class="discount1">NEW</span>&nbsp;
-                    <span class="discount2">-10%</span>
+                    <p class="discount1">NEW</p>&nbsp;
+                    <p class="discount2">-10%</p>
                 </div>
             <p>Women's black top</p>
             <br>
@@ -64,8 +64,8 @@
         <div class="pic">
             <img src="image4.png" alt="women's black top" class="picture">
                 <div id="discount">
-                    <span class="discount1">NEW</span>&nbsp;
-                    <span class="discount2">-10%</span>
+                    <p class="discount1">NEW</p>&nbsp;
+                    <p class="discount2">-10%</p>
                 </div>
             <p>Women's black top</p>
             <br>
