--- a/Week2/day4/products.html
+++ b/Week2/day4/products.html
@@ -38,11 +38,11 @@
             <img src="image2.png" alt="women's black top"class="picture">
                 <div id="discount">
                     <p class="discountsolo"></p>&nbsp;
-                    <p class="discount2">-10%</p>
+                    <p class="discount2">-12%</p>
                 </div>
-            <p>Women's black top</p>
+            <p>Men's Blue Shirt</p>
             <br>
-            <span class="newprice">$14.40</span><span class="oldprice">$16.00</span>
+            <span class="newprice">$17.60</span><span class="oldprice">$20.00</span>
             <br><br>
             <div  class="addtocart"><button>Add to cart</button></div>
         </div>
@@ -54,7 +54,7 @@
                     <p class="discount1">NEW</p>&nbsp;
                     <p class="discount2">-10%</p>
                 </div>
-            <p>Women's black top</p>
+            <p>Men's WHite Shirt</p>
             <br>
             <span class="newprice">$14.40</span><span class="oldprice">$16.00</span>
             <br><br>
@@ -67,11 +67,11 @@
                     <p class="discount1">NEW</p>&nbsp;
                     <p class="discount2">-10%</p>
                 </div>
-            <p>Women's black top</p>
+            <p>Women's White top</p>
             <br>
             <span class="newprice">$14.40</span><span class="oldprice">$16.00</span>
             <br><br>
-            <div  class="addtocart"><button>Add to cart</button></div>
+            <div class="addtocart"><button>Add to cart</button></div>
         </div>
         
     </div>
