--- a/Week2/day4/ShoppingWebsite.html
+++ b/Week2/day4/ShoppingWebsite.html
@@ -14,7 +14,7 @@
         <ul>
             <li id="products"><a href="products.html" target="_blank">Our products</a></li>
             <li><a href="ShoppingWebsite.html" target="_blank"><i class="fa-sharp fa-solid fa-crown" style="color: #ffffff;"></i></a></li>
-            <li id="signup"><a href="signup.html" target="_blank"><i class="fa-solid fa-user-plus" style="color: #ffffff;"></i></a></li>
+            <!-- <li id="signup"><a href="signup.html" target="_blank"><i class="fa-solid fa-user-plus" style="color: #ffffff;"></i></a></li> -->
          </ul>
      </div>
     <!-- end of navbar -->
