--- a/Week1/day2/landingpage.html
+++ b/Week1/day2/landingpage.html
@@ -19,5 +19,20 @@
      <div id="body">
         <h1>Build a landing page for your business<br>or project and generate more leads!</h1>
      </div>
+
+     <div id="container">
+        <div class="minicontainer">
+            <h1>Fully Responsive</h1>
+            <p>This theme will look great on any device, no matter the size!</p>
+        </div>
+        <div class="minicontainer">
+            <h1>Fully Responsive</h1>
+            <p>This theme will look great on any device, no matter the size!</p>
+        </div>
+        <div class="minicontainer">
+            <h1>Fully Responsive</h1>
+            <p>This theme will look great on any device, no matter the size!</p>
+        </div>
+     </div>
 </body>
 </html>
