--- a/Week2/day6/bootstrap.html
+++ b/Week2/day6/bootstrap.html
@@ -12,7 +12,7 @@
         <label>Name</label><br>
         <input name="username"><br>
         <label>Password</label><br>
-        <input name="password" type="password"><br>
+        <input name="password" type="password"><br><br>
         <input type="submit">
     </form>
 </body>
