--- a/Week2/day6/bootstrap.html
+++ b/Week2/day6/bootstrap.html
@@ -5,15 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>bootstrap</title>
+    <style>
+        .container {
+            border: 1px solid black;
+        }
+
+        .row > div {
+            border: 1px dotted blue;
+        }
+
+    </style>
 </head>
 <body>
-    <h1>Welcome to bootstrap!</h1>
-    <form>
-        <label>Name</label><br>
-        <input name="username"><br>
-        <label>Password</label><br>
-        <input name="password" type="password"><br><br>
-        <input type="submit">
+
+    <div class="container">
+        <h1>Welcome to bootstrap!</h1>
+
+        <div class="row">
+            <div class="col-6">This is a div</div>
+            <div class="col-6">This is another div</div>
+        </div>
+
+        <div class="row">
+            <div class="col-8">This is a div</div>
+            <div class="col-4">This is another div</div>
+        </div>
+
+        <div class="row">
+            <div class="col-3">This is a div</div>
+            <div class="col-3">This is another div</div>
+            <div class="col-3">This is another div</div>
+            <div class="col-3">This is another div</div>
+        </div>
+
+    </div>
+    <!-- <form>
+        <div class="input-group">
+            <span class="input-group-text">Name</span>
+            <input type="text" aria-label="name" class="form-control">
+          </div><br>
+          <div class="input-group">
+            <span class="input-group-text">Password</span>
+            <textarea class="form-control" aria-label="password"></textarea>
+          </div><br>
+          <div class="col-12">
+            <button class="btn btn-primary" type="submit">Submit</button>
+          </div> -->
     </form>
 </body>
 </html>
