finish the exercise

--- a/Week2/day6/bootstrappractice.html
+++ b/Week2/day6/bootstrappractice.html
@@ -34,9 +34,7 @@
             <div class="col-2">Div3</div>
         </div>
     </div>
-
     <br>
-
     <div class="container">
         <div class="row">
             <div class="col-3 offset-3">Div1</div>
@@ -47,7 +45,7 @@
             <div class="col-3 offset-3">Div2</div>
         </div>
     </div>
-
+    <br>
     <h1>2 rows, 2 columns, no container</h1>
         <p>When you don't have a container, the colum take the whole width</p>
     <div class="row">
@@ -58,18 +56,18 @@
         <div>Div1</div>
         <div>Div2</div>
     </div>
-
+    <br>
     <div class="container">
         <h1>A container with only columns, no rows</h1>
         <div class="col-12" style="border: 1px solid red">Column 1</div>
         <div class="col-12" style="border: 1px solid red">Column 2</div>
     </div>
-
+    <br>
     <div class="container">
         <div class="row">
-            <div class="col-md-4">Column1</div>
-            <div class="col-md-4">Column2</div>
-            <div class="col-md-4">Column3</div>
+            <div class="col-4 col-sm-4 col-md-4 col-lg-4">Column1</div>
+            <div class="col-4 col-sm-4 col-md-4 col-lg-4">Column2</div>
+            <div class="col-4 col-sm-4 col-md-4 col-lg-4">Column3</div>
         </div>
     </div>
 </body>
