--- a/Week1/day2/landingpage.html
+++ b/Week1/day2/landingpage.html
@@ -19,6 +19,12 @@
 
      <div id="body">
         <h1>Build a landing page for your business<br>or project and generate more leads!</h1>
+            <div>
+                <form>
+                    <input type="text" placeholder="Enter your email...">
+                    <button id="submit" type="submit">Sign Up!</button>
+                </form>
+            </div>
      </div>
 
      <div id="container">
