--- a/Week1/day2/MoonKnight.html
+++ b/Week1/day2/MoonKnight.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <div id="navbar">
+        <nav>
+            <a class="navbar-brand" href="#">
+                <img src="moon-knight-svgrepo-com.svg">
+            </a>
+        </nav>
         <ul>
             <li class="logo"></li>
             <li>Characters</li>
