--- a/Week1/day2/MoonKnight.html
+++ b/Week1/day2/MoonKnight.html
@@ -7,18 +7,28 @@
     <title>Moon Knight</title>
 </head>
 <body>
+    <div id="container">
+    <!-- Navbar -->
     <div id="navbar">
         <nav>
             <a class="navbar-brand" href="#">
                 <img src="moon-knight-svgrepo-com.svg">
             </a>
-        </nav>
         <ul>
             <li class="logo"></li>
             <li>Characters</li>
             <li>About</li>
             <li>Help</li>
         </ul>
+        </nav>
     </div>
+
+    <!-- hero section-->
+     <div id="description">
+        <h1>MoonKnight</h1>
+        <p>Moon Knight follows Steven Grant, a mild-mannered gift-shop employee, who becomes plagued with blackouts and memories of another life.<br>
+            Steven discovers he has dissociative identity disorder and shares a body with mercenary Marc Spector.</p>
+        </div>
+        </div>
 </body>
 </html>
