--- a/Project/Konecte/login.html
+++ b/Project/Konecte/login.html
@@ -21,10 +21,10 @@
     <div class="collapse navbar-collapse" id="mynavbar">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">About us</a>
+          <a class="nav-link" href="events.html">Events</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Events</a>
+         <li class="nav-item">
+          <a class="nav-link" href="bookings.html">Booking</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="login.html" target="_blank">Log in</a>
