--- a/Project/Konecte/events.html
+++ b/Project/Konecte/events.html
@@ -27,7 +27,7 @@
           <a class="nav-link" href="bookings.html">Booking</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="login.html" target="_blank">Log in</a>
+          <a class="nav-link" href="login.html">Log in</a>
         </li>
       </ul>
       <form class="d-flex">
