--- a/Project/Konecte/events.html
+++ b/Project/Konecte/events.html
@@ -38,6 +38,20 @@
   </div>
 </nav>
 
+<div class="container">
+
+  <h1>Events</h1>
+  <br>
+  <div class="card" style="width: 18rem;">
+  <img src="comiccon.jpg" class="card-img-top" alt="comiccon">
+  <div class="card-body">
+    <h5 class="card-title">Comic Con</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <a href="#" class="btn btn-primary">Buy ticket</a>
+  </div>
+</div>
+</div>
+
 <footer></footer>
 </body>
 </html>
