--- a/Project/Konecte/events.html
+++ b/Project/Konecte/events.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
@@ -11,47 +11,85 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-<nav class="navbar navbar-expand-sm">
-  <div class="container-fluid">
-    <a href="index.html" target="_blank"><img class="navbar-brand" src="./src/img/logo.png"></img></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="mynavbar">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="events.html">Events</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link" href="bookings.html">Booking</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="login.html">Log in</a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="text" placeholder="Search">
-        <button class="btn" type="button">Search</button>
-      </form>
+  <!-- Navbar -->
+  <div class="website-mockup">
+    <div class="header">
+      <div class="logo">Konekté</div>
+
+      <!-- Hamburger button -->
+       <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
+      
+       <nav class="nav">
+        <a href="#">Browse Events</a>
+        <a href="#">Create Event</a>
+        <a href="#">About</a>
+        <a href="#">Login</a>
+      </nav>
     </div>
-  </div>
-</nav>
 
-<div class="container">
+    <div class="container">
 
-  <h1>Events</h1>
-  <br>
-  <div class="card" style="width: 18rem;">
-  <img src="./src/img/comiccon.jpg" class="card-img-top" alt="comiccon">
-  <div class="card-body">
-    <h5 class="card-title">Comic Con</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    <a href="#" class="btn btn-primary">Buy ticket</a>
-  </div>
-</div>
-</div>
+      <div class="events-container">
+        <div class="container-fluid">
+          <h1 class="section-title">Upcoming Events</h1>
 
-<footer></footer>
+          <!-- Grid Layout -->
+          <div class="cards-grid">
+
+            <div class="card event-card">
+              <img src="./src/img/comiccon.jpg" class="card-img-top" alt="Comic Con">
+              <div class="card-body">
+                <h5 class="card-title">Comic Con 2025</h5>
+                <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
+                  your favorite artists, discover new comics, and enjoy exclusive panels.</p>
+                <a href="#" class="btn btn-primary">Buy Ticket</a>
+              </div>
+            </div>
+
+            <div class="card event-card">
+              <img src="./src/img/devcon.jpg" class="card-img-top" alt="Comic Con">
+              <div class="card-body">
+                <h5 class="card-title">Comic Con 2025</h5>
+                <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
+                  your favorite artists, discover new comics, and enjoy exclusive panels.</p>
+                <a href="#" class="btn btn-primary">Buy Ticket</a>
+              </div>
+            </div>
+
+            <div class="card event-card">
+              <img src="./src/img/ANYMA.jpg" class="card-img-top" alt="Comic Con">
+              <div class="card-body">
+                <h5 class="card-title">Comic Con 2024</h5>
+                <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
+                  your favorite artists, discover new comics, and enjoy exclusive panels.</p>
+                <a href="#" class="btn btn-primary">Buy Ticket</a>
+              </div>
+            </div>
+
+            <div class="card event-card">
+              <img src="./src/img/DogAdopt.jpg" class="card-img-top" alt="Comic Con">
+              <div class="card-body">
+                <h5 class="card-title">Comic Con 2024</h5>
+                <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
+                  your favorite artists, discover new comics, and enjoy exclusive panels.</p>
+                <a href="#" class="btn btn-primary">Buy Ticket</a>
+              </div>
+            </div>
+
+            <div class="card event-card">
+              <img src="./src/img/rt.jpg" class="card-img-top" alt="Comic Con">
+              <div class="card-body">
+                <h5 class="card-title">Comic Con 2024</h5>
+                <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
+                  your favorite artists, discover new comics, and enjoy exclusive panels.</p>
+                <a href="#" class="btn btn-primary">Buy Ticket</a>
+              </div>
+            </div>
+
+
+          </div>
+
+          <footer></footer>
 </body>
+
 </html>
