--- a/Project/Konecte/events.html
+++ b/Project/Konecte/events.html
@@ -14,19 +14,19 @@
   <!-- Navbar -->
   <div class="website-mockup">
     <div class="header">
-      <div class="logo">Konekté</div>
+      <div class="logo"><a href="index.html">Konekté</a></div>
 
       <!-- Hamburger button -->
-       <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
+       <div class="hamburger">&#9776;</div>
       
        <nav class="nav">
-        <a href="#">Browse Events</a>
-        <a href="#">Create Event</a>
-        <a href="#">About</a>
-        <a href="#">Login</a>
+        <a href="events.html">Browse Events</a>
+        <a href="create.html">Create Event</a>
+        <a href="bookings.html">Bookings</a>
+        <a href="login.html">Login</a>
       </nav>
     </div>
-
+    
     <div class="container">
 
       <div class="events-container">
@@ -49,7 +49,7 @@
             <div class="card event-card">
               <img src="./src/img/devcon.jpg" class="card-img-top" alt="Comic Con">
               <div class="card-body">
-                <h5 class="card-title">Comic Con 2025</h5>
+                <h5 class="card-title">Developer Conference</h5>
                 <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
                   your favorite artists, discover new comics, and enjoy exclusive panels.</p>
                 <a href="#" class="btn btn-primary">Buy Ticket</a>
@@ -59,7 +59,7 @@
             <div class="card event-card">
               <img src="./src/img/ANYMA.jpg" class="card-img-top" alt="Comic Con">
               <div class="card-body">
-                <h5 class="card-title">Comic Con 2024</h5>
+                <h5 class="card-title">Anyma concert</h5>
                 <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
                   your favorite artists, discover new comics, and enjoy exclusive panels.</p>
                 <a href="#" class="btn btn-primary">Buy Ticket</a>
@@ -69,7 +69,7 @@
             <div class="card event-card">
               <img src="./src/img/DogAdopt.jpg" class="card-img-top" alt="Comic Con">
               <div class="card-body">
-                <h5 class="card-title">Comic Con 2024</h5>
+                <h5 class="card-title">Adoption Day</h5>
                 <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
                   your favorite artists, discover new comics, and enjoy exclusive panels.</p>
                 <a href="#" class="btn btn-primary">Buy Ticket</a>
@@ -79,17 +79,29 @@
             <div class="card event-card">
               <img src="./src/img/rt.jpg" class="card-img-top" alt="Comic Con">
               <div class="card-body">
-                <h5 class="card-title">Comic Con 2024</h5>
+                <h5 class="card-title">Art Exhibition</h5>
                 <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
                   your favorite artists, discover new comics, and enjoy exclusive panels.</p>
                 <a href="#" class="btn btn-primary">Buy Ticket</a>
               </div>
             </div>
 
+            <div class="card event-card">
+              <img src="./src/img/gameevent.jpg" class="card-img-top" alt="Comic Con">
+              <div class="card-body">
+                <h5 class="card-title">Gaming Tournament</h5>
+                <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
+                  your favorite artists, discover new comics, and enjoy exclusive panels.</p>
+                <a href="#" class="btn btn-primary">Buy Ticket</a>
+              </div>
+            </div>
 
           </div>
 
           <footer></footer>
+
+  <!-- external js -->
+  <script src="./src/js/script.js"></script>
 </body>
 
 </html>
