--- a/Project/Konecte/login.html
+++ b/Project/Konecte/login.html
@@ -12,31 +12,20 @@
 
 <body>
     <!-- Navbar -->
-<nav class="navbar navbar-expand-sm">
-  <div class="container-fluid">
-    <a href="index.html" target="_blank"><img class="navbar-brand" src="./src/img/logo.png"></img></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="mynavbar">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="events.html">Events</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link" href="bookings.html">Booking</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="login.html">Log in</a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="text" placeholder="Search">
-        <button class="btn" type="button">Search</button>
-      </form>
+ <div class="website-mockup">
+    <div class="header">
+      <div class="logo"><a href="index.html">Konekté</a></div>
+
+      <!-- Hamburger button -->
+       <div class="hamburger">&#9776;</div>
+      
+       <nav class="nav">
+        <a href="events.html">Browse Events</a>
+        <a href="create.html">Create Event</a>
+        <a href="bookings.html">Bookings</a>
+        <a href="login.html">Login</a>
+      </nav>
     </div>
-  </div>
-</nav>
 
 <!-- Login form -->
 
