--- a/Project/Konecte/login.html
+++ b/Project/Konecte/login.html
@@ -3,46 +3,96 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-  <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-  <link rel="stylesheet" href="./src/css/konecte.css">
-  <title>Konecte</title>
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link rel="stylesheet" href="./src/css/konecte.css">
+    <title>Konecte</title>
 </head>
 
 <body>
     <!-- Navbar -->
- <div class="website-mockup">
-    <div class="header">
-      <div class="logo"><a href="index.html">Konekté</a></div>
+    <nav class="fixed-top">
+        <div class="website-mockup">
+            <div class="header">
+                <div class="logo"><a href="index.html">Konekté</a></div>
+                <nav class="nav">
+                    <a href="events.html">Browse Events</a>
+                    <a href="create.html">Create Event</a>
+                    <a href="bookings.html">Bookings</a>
+                    <a href="login.html">Login</a>
+                </nav>
+                <!-- Hamburger -->
+                <div class="hamburger" onclick="toggleMobileMenu()">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <div class="mobile-nav" id="mobileNav">
+                <a href="events.html">Browse Events</a>
+                <a href="create.html">Create Event</a>
+                <a href="bookings.html">Bookings</a>
+                <a href="login.html">Login</a>
+            </div>
+        </div>
+    </nav>
+    <!-- end navbar -->
 
-      <!-- Hamburger button -->
-       <div class="hamburger">&#9776;</div>
-      
-       <nav class="nav">
-        <a href="events.html">Browse Events</a>
-        <a href="create.html">Create Event</a>
-        <a href="bookings.html">Bookings</a>
-        <a href="login.html">Login</a>
-      </nav>
+    <!-- Login form -->
+    <div class="form-body">
+        <form class="login-form" action="login.php" method="POST">
+            <div class="form-group">
+                <label class="form-label" for="email">Email Address</label>
+                <input type="email" id="email" name="email" class="form-input" placeholder="Enter your email" required>
+            </div>
+
+            <div class="form-group">
+                <label class="form-label" for="password">Password</label>
+                <input type="password" id="password" name="password" class="form-input"
+                    placeholder="Enter your password" required>
+            </div>
+
+            <button type="submit" class="login-btn">Sign In</button>
+
+            <div class="forgot-password">
+                <a href="forgot-password.html">Forgot your password?</a>
+            </div>
+        </form>
+    </div>
+    <!-- end form -->
+
+    <!-- Footer -->
+  <footer class="site-footer">
+    <div class="footer-container">
+      <!-- About Section -->
+      <div class="footer-about">
+        <h3>About Us</h3>
+        <p>We connect you to amazing events – from concerts and gaming tournaments to business meetups and community
+          gatherings. Discover, join, and make memories!</p>
+      </div>
+
+      <!-- Social Media Section -->
+      <div class="footer-social">
+        <h3>Follow Us</h3>
+        <div class="social-icons">
+          <a href="#" aria-label="Facebook" class="social-icon facebook">F</a>
+          <a href="#" aria-label="Instagram" class="social-icon instagram">I</a>
+        </div>
+      </div>
     </div>
 
-<!-- Login form -->
+    <div class="footer-bottom">
+      <p>&copy; 2025 Konekté. All rights reserved.</p>
+    </div>
+  </footer>
 
-    <form class="signin">
-    <div class="mb-5">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <br>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    </div>
-    <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <br>
-        <input type="password" class="form-control" id="exampleInputPassword1">
-    </div>
-    <button type="submit" class="btn">Submit</button>
-        <br>
-    </form>
+    <!-- external js -->
+    <script src="./src/js/script.js"></script>
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </body>
+
 </html>
