--- a/Project/Konecte/events.html
+++ b/Project/Konecte/events.html
@@ -124,14 +124,14 @@
       </div>
 
       <!-- Social Media Section -->
-      <div class="footer-social">
+      <!-- <div class="footer-social">
         <h3>Follow Us</h3>
         <div class="social-icons">
           <a href="#" aria-label="Facebook" class="social-icon facebook">F</a>
           <a href="#" aria-label="Instagram" class="social-icon instagram">I</a>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="footer-bottom">
       <p>&copy; 2025 Konekté. All rights reserved.</p>
