--- a/Project/Konecte/bookings.html
+++ b/Project/Konecte/bookings.html
@@ -39,13 +39,16 @@
   </nav>
   <!-- end navbar -->
 
-  <div class="bookings-container">
+  <!-- hero section -->
+  <div class="container-fluid">
+    
+  <h1>Welcome to Konekté!</h1>
 
-    <h1>CONTENT</h1>
 
   </div>
+  <!-- /hero section -->
 
-  <!-- Footer -->
+      <!-- Footer -->
   <footer class="site-footer">
     <div class="footer-container">
       <!-- About Section -->
@@ -70,11 +73,10 @@
     </div>
   </footer>
 
-  <!-- external js -->
-  <script src="./src/js/script.js"></script>
-  <!-- bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+      <!-- external js -->
+      <script src="./src/js/script.js"></script>
+      <!-- bootstrap -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
-
 </html>
