--- a/Project/Konecte/events.html
+++ b/Project/Konecte/events.html
@@ -19,7 +19,7 @@
         <nav class="nav">
           <a href="events.html">Browse Events</a>
           <a href="create.html">Create Event</a>
-          <a href="bookings.html">Bookings</a>
+          <a href="#">Bookings</a>
           <a href="login.html">Login</a>
         </nav>
         <!-- Hamburger -->
@@ -54,7 +54,7 @@
             <h5 class="card-title">Comic Con 2025</h5>
             <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
               your favorite artists, discover new comics, and enjoy exclusive panels.</p>
-            <a href="#" class="btn btn-primary">Buy Ticket</a>
+            <a href="bookings.html" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
@@ -64,7 +64,7 @@
             <h5 class="card-title">Developer Conference</h5>
             <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
               your favorite artists, discover new comics, and enjoy exclusive panels.</p>
-            <a href="#" class="btn btn-primary">Buy Ticket</a>
+            <a href="bookings.html" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
@@ -74,7 +74,7 @@
             <h5 class="card-title">Anyma concert</h5>
             <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
               your favorite artists, discover new comics, and enjoy exclusive panels.</p>
-            <a href="#" class="btn btn-primary">Buy Ticket</a>
+            <a href="bookings.html" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
@@ -94,7 +94,7 @@
             <h5 class="card-title">Art Exhibition</h5>
             <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
               your favorite artists, discover new comics, and enjoy exclusive panels.</p>
-            <a href="#" class="btn btn-primary">Buy Ticket</a>
+            <a href="bookings.html" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
@@ -104,7 +104,7 @@
             <h5 class="card-title">Gaming Tournament</h5>
             <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
               your favorite artists, discover new comics, and enjoy exclusive panels.</p>
-            <a href="#" class="btn btn-primary">Buy Ticket</a>
+            <a href="bookings.html" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
       </div>
@@ -113,7 +113,30 @@
 <!-- end event cards -->
       <br><br>
 
-      
+      <!-- Footer -->
+  <footer class="site-footer">
+    <div class="footer-container">
+      <!-- About Section -->
+      <div class="footer-about">
+        <h3>About Us</h3>
+        <p>We connect you to amazing events – from concerts and gaming tournaments to business meetups and community
+          gatherings. Discover, join, and make memories!</p>
+      </div>
+
+      <!-- Social Media Section -->
+      <div class="footer-social">
+        <h3>Follow Us</h3>
+        <div class="social-icons">
+          <a href="#" aria-label="Facebook" class="social-icon facebook">F</a>
+          <a href="#" aria-label="Instagram" class="social-icon instagram">I</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p>&copy; 2025 Konekté. All rights reserved.</p>
+    </div>
+  </footer>
 
       <!-- external js -->
       <script src="./src/js/script.js"></script>
