made hero section

--- a/Project/Konecte/index.html
+++ b/Project/Konecte/index.html
@@ -40,10 +40,168 @@
   <!-- end navbar -->
 
   <!-- hero -->
-  <div class="page-wrapper">
+  <div class="herobody">
+    <br><br>
+    <section class="hero">
+      <div class="hero-content">
+        <div class="hero-text">
+          <h1 class="hero-title">
+            Discover & Create
+            <span style="color: #319795;">Amazing Events</span>
+          </h1>
+          <p class="hero-subtitle">
+            Connect with your community through free workshops, paid experiences, and unforgettable gatherings. From art
+            classes to music festivals, find your next adventure or share your passion with others.
+          </p>
 
-    <h1>content</h1>
+          <div class="hero-buttons">
+            <a href="events.html" class="btn btn-primary">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+                <circle cx="12" cy="10" r="3"></circle>
+              </svg>
+              Browse Events
+            </a>
+            <a href="create.html" class="btn btn-secondary">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <circle cx="12" cy="12" r="10"></circle>
+                <line x1="12" y1="8" x2="12" y2="16"></line>
+                <line x1="8" y1="12" x2="16" y2="12"></line>
+              </svg>
+              Create Event
+            </a>
+          </div>
+        </div>
 
+        <div class="hero-visual">
+          <div class="events-carousel">
+            <div class="carousel-container" id="carouselContainer">
+
+              <!-- Event 1 -->
+              <div class="hero-card">
+                <span class="event-type free-event">Free</span>
+                <div class="event-title">Community Art Workshop</div>
+                <div class="event-date">
+                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                    <line x1="16" y1="2" x2="16" y2="6"></line>
+                    <line x1="8" y1="2" x2="8" y2="6"></line>
+                    <line x1="3" y1="10" x2="21" y2="10"></line>
+                  </svg>
+                  Saturday, Aug 24 • 2:00 PM
+                </div>
+                <div class="event-location">📍 Community Center, Main St</div>
+                <div class="event-description">Join us for a creative afternoon of painting and crafts. All materials
+                  provided. Perfect for beginners!</div>
+                <button class="event-btn">Learn More</button>
+              </div>
+
+              <!-- Event 2 -->
+              <div class="hero-card">
+                <span class="event-type paid-event">$25</span>
+                <div class="event-title">Jazz Night at The Blue Note</div>
+                <div class="event-date">
+                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                    <line x1="16" y1="2" x2="16" y2="6"></line>
+                    <line x1="8" y1="2" x2="8" y2="6"></line>
+                    <line x1="3" y1="10" x2="21" y2="10"></line>
+                  </svg>
+                  Friday, Aug 30 • 8:00 PM
+                </div>
+                <div class="event-location">🎵 The Blue Note Venue</div>
+                <div class="event-description">An intimate evening with local jazz musicians. Enjoy cocktails and smooth
+                  tunes in a cozy atmosphere.</div>
+                <button class="event-btn">Book Tickets</button>
+              </div>
+
+              <!-- Event 3 -->
+              <div class="hero-card">
+                <span class="event-type free-event">Free</span>
+                <div class="event-title">Tech Meetup: AI & Future</div>
+                <div class="event-date">
+                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                    <line x1="16" y1="2" x2="16" y2="6"></line>
+                    <line x1="8" y1="2" x2="8" y2="6"></line>
+                    <line x1="3" y1="10" x2="21" y2="10"></line>
+                  </svg>
+                  Wednesday, Sep 4 • 6:30 PM
+                </div>
+                <div class="event-location">💻 TechHub Coworking Space</div>
+                <div class="event-description">Network with fellow developers and explore the latest in AI technology.
+                  Free pizza and drinks!</div>
+                <button class="event-btn">Join Event</button>
+              </div>
+
+              <!-- Event 4 -->
+              <div class="hero-card">
+                <span class="event-type paid-event">$15</span>
+                <div class="event-title">Italian Cooking Masterclass</div>
+                <div class="event-date">
+                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                    <line x1="16" y1="2" x2="16" y2="6"></line>
+                    <line x1="8" y1="2" x2="8" y2="6"></line>
+                    <line x1="3" y1="10" x2="21" y2="10"></line>
+                  </svg>
+                  Sunday, Sep 8 • 11:00 AM
+                </div>
+                <div class="event-location">🍝 Nonna's Kitchen Studio</div>
+                <div class="event-description">Learn to make authentic pasta and tiramisu from a professional Italian
+                  chef. Take home recipes!</div>
+                <button class="event-btn">Reserve Spot</button>
+              </div>
+
+              <!-- Event 5 -->
+              <div class="hero-card">
+                <span class="event-type sold-out">Sold Out</span>
+                <div class="event-title">Music Festival 2024</div>
+                <div class="event-date">
+                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                    <line x1="16" y1="2" x2="16" y2="6"></line>
+                    <line x1="8" y1="2" x2="8" y2="6"></line>
+                    <line x1="3" y1="10" x2="21" y2="10"></line>
+                  </svg>
+                  Saturday, Sep 14 • 12:00 PM
+                </div>
+                <div class="event-location">🎤 Riverside Park</div>
+                <div class="event-description">Three days of amazing music with local and international artists. Food
+                  trucks and activities for all ages.</div>
+                <button class="event-btn" disabled>Sold Out</button>
+              </div>
+            </div>
+
+            <div class="carousel-nav">
+              <button class="carousel-btn" id="prevBtn" onclick="changeSlide(-1)">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <polyline points="15,18 9,12 15,6"></polyline>
+                </svg>
+              </button>
+
+              <div class="carousel-dots" id="carouselDots">
+                <div class="dot active" onclick="goToSlide(0)"></div>
+                <div class="dot" onclick="goToSlide(1)"></div>
+                <div class="dot" onclick="goToSlide(2)"></div>
+                <div class="dot" onclick="goToSlide(3)"></div>
+                <div class="dot" onclick="goToSlide(4)"></div>
+              </div>
+
+              <button class="carousel-btn" id="nextBtn" onclick="changeSlide(1)">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <polyline points="9,18 15,12 9,6"></polyline>
+                </svg>
+              </button>
+            </div>
+
+            <div class="carousel-counter">
+              <span id="currentSlide">1</span> of <span id="totalSlides">5</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 
   <!-- end hero -->
