--- a/Project/Konecte/events.html
+++ b/Project/Konecte/events.html
@@ -54,7 +54,7 @@
             <h5 class="card-title">Comic Con 2025</h5>
             <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
               your favorite artists, discover new comics, and enjoy exclusive panels.</p>
-            <a href="bookings.html" class="btn btn-primary">Buy Ticket</a>
+            <a href="bookings.html?event=comic-con" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
@@ -64,7 +64,7 @@
             <h5 class="card-title">Developer Conference</h5>
             <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
               your favorite artists, discover new comics, and enjoy exclusive panels.</p>
-            <a href="bookings.html" class="btn btn-primary">Buy Ticket</a>
+            <a href="bookings.html?event=developer-conference" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
@@ -74,7 +74,7 @@
             <h5 class="card-title">Anyma concert</h5>
             <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
               your favorite artists, discover new comics, and enjoy exclusive panels.</p>
-            <a href="bookings.html" class="btn btn-primary">Buy Ticket</a>
+            <a href="bookings.html?event=anyma-concert" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
@@ -84,7 +84,7 @@
             <h5 class="card-title">Adoption Day</h5>
             <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
               your favorite artists, discover new comics, and enjoy exclusive panels.</p>
-            <a href="#" class="btn btn-primary">Buy Ticket</a>
+            <a href="bookings.html?event=adoption-day" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
@@ -94,7 +94,7 @@
             <h5 class="card-title">Art Exhibition</h5>
             <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
               your favorite artists, discover new comics, and enjoy exclusive panels.</p>
-            <a href="bookings.html" class="btn btn-primary">Buy Ticket</a>
+            <a href="bookings.html?event=art-exhibition" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
@@ -104,7 +104,7 @@
             <h5 class="card-title">Gaming Tournament</h5>
             <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
               your favorite artists, discover new comics, and enjoy exclusive panels.</p>
-            <a href="bookings.html" class="btn btn-primary">Buy Ticket</a>
+            <a href="bookings.html?event=gaming-tournament" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
       </div>
