--- a/Project/Konecte/index.html
+++ b/Project/Konecte/index.html
@@ -112,7 +112,7 @@
                 <div class="event-location">🎵 The Blue Note Venue</div>
                 <div class="event-description">An intimate evening with local jazz musicians. Enjoy cocktails and smooth
                   tunes in a cozy atmosphere.</div>
-                <button class="event-btn">Book Tickets</button>
+                <button class="event-btn"><a href="bookings.html">Book Tickets</a></button>
               </div>
 
               <!-- Event 3 -->
@@ -172,6 +172,7 @@
                 <button class="event-btn" disabled>Sold Out</button>
               </div>
             </div>
+            
 
             <div class="carousel-nav">
               <button class="carousel-btn" id="prevBtn" onclick="changeSlide(-1)">
