--- a/Project/Konecte/bookings.html
+++ b/Project/Konecte/bookings.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <body>
   <!-- Navbar -->
   <nav class="fixed-top">
     <div class="website-mockup">
@@ -22,33 +23,130 @@
           <a href="bookings.html">Bookings</a>
           <a href="login.html">Login</a>
         </nav>
-        <!-- Hamburger -->
-        <div class="hamburger" onclick="toggleMobileMenu()">
+        <div class="hamburger">
           <span></span>
           <span></span>
           <span></span>
         </div>
       </div>
-      <div class="mobile-nav" id="mobileNav">
-        <a href="events.html">Browse Events</a>
-        <a href="create.html">Create Event</a>
-        <a href="bookings.html">Bookings</a>
-        <a href="login.html">Login</a>
-      </div>
     </div>
   </nav>
-  <!-- end navbar -->
 
-  <!-- hero section -->
-  <div class="container-fluid">
-    
-  <h1>Welcome to Konekté!</h1>
+  <!-- Main Content -->
+  <div class="booking-container">
+    <div class="booking-header">
+      <h1 class="booking-title">Book Your <span style="color: #319795;">Ticket</span></h1>
+      <p class="booking-subtitle">Complete your booking details below</p>
+    </div>
 
+    <!-- Event Preview -->
+    <div class="event-preview">
+      <img id="eventImage" src="" alt="Event Image" class="event-image">
+      <div class="event-content">
+        <span id="eventType" class="event-type">Loading...</span>
+        <h3 id="eventTitle">Loading Event...</h3>
+        <div class="event-meta">
+          <span id="eventDate">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+              <line x1="16" y1="2" x2="16" y2="6"></line>
+              <line x1="8" y1="2" x2="8" y2="6"></line>
+              <line x1="3" y1="10" x2="21" y2="10"></line>
+            </svg>
+            Loading...
+          </span>
+          <span id="eventLocation">📍 Loading...</span>
+        </div>
+        <p id="eventDescription" class="event-description">Loading event description...</p>
+        
+        <div class="event-features" id="eventFeatures">
+          <!-- Features will be populated by JavaScript -->
+        </div>
+      </div>
+    </div>
 
+    <!-- Booking Form -->
+    <div class="booking-form">
+      <div class="success-message" id="successMessage">
+        ✅ Booking confirmed! Check your email for details.
+      </div>
+
+      <form id="bookingForm">
+        <!-- Personal Information -->
+        <div class="form-section">
+          <h4>Personal Information</h4>
+          <div class="form-row">
+            <div class="form-group">
+              <label for="firstName">First Name</label>
+              <input type="text" class="form-control" id="firstName" name="firstName" required>
+            </div>
+            <div class="form-group">
+              <label for="lastName">Last Name</label>
+              <input type="text" class="form-control" id="lastName" name="lastName" required>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group">
+              <label for="email">Email Address</label>
+              <input type="email" class="form-control" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+              <label for="phone">Phone Number</label>
+              <input type="tel" class="form-control" id="phone" name="phone">
+            </div>
+          </div>
+        </div>
+
+        <!-- Ticket Selection -->
+        <div class="form-section">
+          <h4>Ticket Selection</h4>
+          <div class="ticket-selector">
+            <div class="ticket-info">
+              <h5 id="ticketName">General Admission</h5>
+              <span class="ticket-price">$<span id="ticketPrice">25.00</span> each</span>
+            </div>
+            <div class="quantity-control">
+              <button type="button" class="qty-btn" onclick="changeQuantity(-1)">-</button>
+              <span class="qty-display" id="quantity">1</span>
+              <button type="button" class="qty-btn" onclick="changeQuantity(1)">+</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Special Requests -->
+        <div class="form-section">
+          <div class="form-group">
+            <label for="specialRequests">Special Requests (Optional)</label>
+            <textarea class="form-control" id="specialRequests" name="specialRequests" rows="3" placeholder="Any dietary requirements, accessibility needs, or special requests..."></textarea>
+          </div>
+        </div>
+
+        <!-- Booking Summary -->
+        <div class="booking-summary">
+          <div class="summary-row">
+            <span><span id="ticketTypeSummary">General Admission</span> × <span id="summaryQty">1</span></span>
+            <span>$<span id="subtotal">25.00</span></span>
+          </div>
+          <div class="summary-row">
+            <span>Service Fee</span>
+            <span>$<span id="serviceFee">2.50</span></span>
+          </div>
+          <div class="summary-row summary-total">
+            <span>Total</span>
+            <span style="color: #319795;">$<span id="total">27.50</span></span>
+          </div>
+        </div>
+
+        <!-- Action Buttons -->
+        <div style="text-align: center; margin-top: 30px;">
+          <a href="events.html" class="btn-secondary">← Back to Events</a>
+          <button type="submit" class="btn-primary">Complete Booking</button>
+        </div>
+      </form>
+    </div>
   </div>
-  <!-- /hero section -->
 
-      <!-- Footer -->
+  <!-- Footer -->
   <footer class="site-footer">
     <div class="footer-container">
       <!-- About Section -->
@@ -73,10 +171,11 @@
     </div>
   </footer>
 
-      <!-- external js -->
-      <script src="./src/js/script.js"></script>
-      <!-- bootstrap -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- external js -->
+  <script src="./src/js/script.js"></script>
+  <!-- bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
