--- a/Project/Konecte/events.html
+++ b/Project/Konecte/events.html
@@ -52,61 +52,62 @@
           <img src="./src/img/comiccon.jpg" class="card-img-top" alt="Comic Con">
           <div class="card-body">
             <h5 class="card-title">Comic Con 2025</h5>
-            <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
-              your favorite artists, discover new comics, and enjoy exclusive panels.</p>
+            <p class="card-text">Step into the world of comics, movies, and cosplay with panels, workshops, and
+              celebrity meet-ups.</p>
             <a href="bookings.html?event=comic-con" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
         <div class="card event-card">
-          <img src="./src/img/devcon.jpg" class="card-img-top" alt="Comic Con">
+          <img src="./src/img/devcon.jpg" class="card-img-top" alt="Developer Conference">
           <div class="card-body">
             <h5 class="card-title">Developer Conference</h5>
-            <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
-              your favorite artists, discover new comics, and enjoy exclusive panels.</p>
+            <p class="card-text">A gathering for tech enthusiasts to explore coding, AI, and the future of software
+              development.</p>
             <a href="bookings.html?event=developer-conference" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
         <div class="card event-card">
-          <img src="./src/img/ANYMA.jpg" class="card-img-top" alt="Comic Con">
+          <img src="./src/img/ANYMA.jpg" class="card-img-top" alt="Anyma Concert">
           <div class="card-body">
-            <h5 class="card-title">Anyma concert</h5>
-            <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
-              your favorite artists, discover new comics, and enjoy exclusive panels.</p>
+            <h5 class="card-title">Anyma Concert</h5>
+            <p class="card-text">Immerse yourself in an electrifying night of live music, lights, and unforgettable
+              vibes.</p>
             <a href="bookings.html?event=anyma-concert" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
         <div class="card event-card">
-          <img src="./src/img/DogAdopt.jpg" class="card-img-top" alt="Comic Con">
+          <img src="./src/img/DogAdopt.jpg" class="card-img-top" alt="Adoption Day">
           <div class="card-body">
             <h5 class="card-title">Adoption Day</h5>
-            <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
-              your favorite artists, discover new comics, and enjoy exclusive panels.</p>
+            <p class="card-text">Find your new best friend and give a loving home to adorable pets waiting to be
+              adopted.</p>
             <a href="bookings.html?event=adoption-day" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
         <div class="card event-card">
-          <img src="./src/img/rt.jpg" class="card-img-top" alt="Comic Con">
+          <img src="./src/img/rt.jpg" class="card-img-top" alt="Art Exhibition">
           <div class="card-body">
             <h5 class="card-title">Art Exhibition</h5>
-            <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
-              your favorite artists, discover new comics, and enjoy exclusive panels.</p>
+            <p class="card-text">Discover inspiring artworks from local and international artists across multiple
+              mediums.</p>
             <a href="bookings.html?event=art-exhibition" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
 
         <div class="card event-card">
-          <img src="./src/img/gameevent.jpg" class="card-img-top" alt="Comic Con">
+          <img src="./src/img/gameevent.jpg" class="card-img-top" alt="Gaming Tournament">
           <div class="card-body">
             <h5 class="card-title">Gaming Tournament</h5>
-            <p class="card-text">Join thousands of fans for the ultimate comic book and pop culture experience. Meet
-              your favorite artists, discover new comics, and enjoy exclusive panels.</p>
+            <p class="card-text">Compete with top players in action-packed battles and experience the thrill of esports
+              live.</p>
             <a href="bookings.html?event=gaming-tournament" class="btn btn-primary">Buy Ticket</a>
           </div>
         </div>
+
       </div>
     </div>
   </div>
