--- a/Project/Konecte/bookings.html
+++ b/Project/Konecte/bookings.html
@@ -46,13 +46,13 @@
       <form id="bookingForm">
         <!-- Tickets -->
         <div class="form-section">
-          <h3 class="section-title">Select Tickets</h3>
+          <h3 class="booking-section-title">Select Tickets</h3>
           <div id="ticketOptions"></div>
         </div>
 
         <!-- Personal Info -->
         <div class="form-section">
-          <h3 class="section-title">Your Details</h3>
+          <h3 class="booking-section-title">Your Details</h3>
           <input type="text" class="form-control" id="firstName" placeholder="First Name" required>
           <input type="text" class="form-control" id="lastName" placeholder="Last Name" required>
           <input type="email" class="form-control" id="email" placeholder="Email Address" required>
