--- a/Week18/day5/tictactoe.html
+++ b/Week18/day5/tictactoe.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="tictactoe.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Tic tac toe</title>
 </head>
 <body>
-    
+    <div class="game-container">
+        <h1>Tic Tac Toe Game</h1>
+        <div class="player" id="player">Player X's turn</div>
+
+        <div class="game-board" id="gameBoard">
+
+        </div>
+
+        <button class="reset-btn" id="resetBtn">New Game</button>
+    </div>
 </body>
+
+<script></script>
 </html>
