--- a/Week18/day5/tictactoe.html
+++ b/Week18/day5/tictactoe.html
@@ -13,12 +13,20 @@
         <div class="player" id="player">Player X's turn</div>
 
         <div class="game-board" id="gameBoard">
-
+            <button class="cell" data-index="0"></button>
+            <button class="cell" data-index="1"></button>
+            <button class="cell" data-index="2"></button>
+            <button class="cell" data-index="3"></button>
+            <button class="cell" data-index="4"></button>
+            <button class="cell" data-index="5"></button>
+            <button class="cell" data-index="6"></button>
+            <button class="cell" data-index="7"></button>
+            <button class="cell" data-index="8"></button>
         </div>
 
         <button class="reset-btn" id="resetBtn">New Game</button>
     </div>
 </body>
 
-<script></script>
+<script src="game.js"></script>
 </html>
