--- a/Week16/day5/recap/event.html
+++ b/Week16/day5/recap/event.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        .dark {
+            background-color: rgb(0, 0, 0);
+            color: blue;
+        }
+    </style>
 </head>
 <body onscroll="userScroll()">
+    <div>
+
+    <button onclick="swapBgColor()">Toggle</button>
+
+   </div>
     <h1>Books</h1>
     <p>List of books available</p>
     <ul>
@@ -15,8 +27,6 @@
     </ul>
 
    <img src="https://images.wallpapersden.com/image/download/marvel-moon-knight-superhero_bmdra26UmZqaraWkpJRobWllrWdma2U.jpg">
-   
-   
 
 </body>
 <script src="main.js" defer></script> 
